--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       </figcaption>
     </figure>
-    <p class="user-motivation">contrarian</p>
+    <p class="user-motivation">designer, developer</p>
   </section>
 
   <footer>
